api/templates/default/etemplate2.css
/**
 * Styles for etemplate2 widgets
 *
 * @version: $Id$
 */

/**
 * Naming convention:
 * --[block][--element][--modifier]-attribute
 *
 * Some system-wide variables
 * These are logical (eg: error, active, highlight, header) not stylistic (red, grey)
 * By defining them here they are available inside WebComponents as well, though any CSS defined here that
 * applies to slotted elements takes precedence over what's in the WebComponent's style.
 *
 * For variables it is better to omit the block and element parts of the name.
 * For example, --error-color is better than --message_wrapper--message--error-color because it can be used in
 * more places (logically, no technical limitation on the variable).
 * If a specific value is needed for some element, it is probably better to re-set
 * the less specific variable rather than define a new variable:
 * :root {
 *   --error-color: pink;
 *   --error-background-color: initial;
 * }
 * .nextmatch--header {
 *   --error-color: fuchsia;
 *   --error-background-color: black;
 * }
 * This will have any child elements under the block with nextmatch--header class use the more specific values, while
 * letting us stick with one variable.
 *
 *
 * @see http://getbem.com/naming/ for what inspired naming convention
 */
:root {
    --primary-background-color: #4177a2;
    --highlight-background-color: rgba(153, 204, 255, .4);

    --label-color: #000000;
    /* For fixed width labels - use class 'et2-label-fixed'*/
    --label-width: 8em;

    --input-border-color: #E6E6E6;
    --input-text-color: #26537C;

    --warning-color: rgba(255, 204, 0, .5);
    --error-color: rgba(204, 0, 51, .5);

}

/**
 * Top level
 */
.et2_container {
    /*margin: 10px;
      border: 1px solid gray;*/
    padding: 0px;
    background-color: white;
    height: 99%;
    max-width: 100%
}

.et2_container > div:not([class]) {
    height: 100%;
}

/**
 * Basic rules
 */

/*Hide element*/
.hideme {
    display: none !important;
}

/*display none*/
.hide {
    display: none;
}
/* Put widget label to the left of the widget, with fixed width */
::part(form-control) {
    display: flex;
    align-items: center;
    gap: 1em;
    flex-wrap: wrap;
}

::part(form-control-label) {
    flex: 0 0 auto;
    white-space: normal;
}

::part(form-control-input) {
    flex: 1 1 auto;
    position: relative;
    max-width: 100%;
}

::part(form-control-help-text) {
    flex-basis: 100%;
    position: relative;
}

/* Use .et2-label-fixed class to give fixed label size */
.et2-label-fixed::part(form-control-label) {
    width: initial;
    width: var(--label-width, 8em);
}

/**
 * VBox widget
 */
div.et2_vbox > * {
    display: block;
}

/**
 * HBox widget
 */
div.et2_hbox div.et2_hbox {
    display: inline;
}

div.et2_hbox {
    white-space: nowrap;
}

div.et2_hbox > * {
    text-align: left;
    white-space: normal;
    margin-right: 5px;
    display: inline-block;
}

div.et2_hbox > select {
    white-space: pre;
}

div.et2_hbox > *:empty {
    margin-right: 0;
}

div.et2_hbox_left {
    float: left;
}

div.et2_hbox_al_center {
    text-align: center;
}

div.et2_hbox_al_right {
    text-align: right;
}

div.et2_hbox_right {
    float: right;
    clear: right;
}

div.et2_hbox > div {
    display: inline-block;
}

/**
 * History log widget, most comes from the gridview
 */
/* Turn off column button, it does nothing */
.et2_historylog table.egwGridView_outer thead tr th.optcol:hover {
    cursor: inherit;
}

.et2_historylog table.egwGridView_outer thead tr th.optcol span.selectcols {
    background: inherit;
}

/**
 * Password widget
 */
.et2_password {
    display: flex;
    flex-direction: row;
    border: 1px solid #e6e6e6;
    white-space: nowrap;
    min-width: fit-content;
}

.et2_password > input {
    border: none;
    flex-grow: 2;
    min-width: 20ex;
}

.et2_password > input:focus {
    outline: none;
}

.et2_password > * {
    vertical-align: middle;
}

.et2_password > img {
    margin: 3px;
}

/**
 * Placeholder widget - used for un-implemented widgets
 */
.et2_placeholder {
    display: inline-block;
    border: 1px solid cornflowerblue;
    background-color: #FCFCFC;
    padding: 3px;
    margin: 1px;
}

.et2_placeholder .et2_caption {
    display: block;
    font-size: 8pt;
    margin: 0 0 5px 0;
    font-weight: bold;
    color: #2E2E2E;
    cursor: pointer;
    text-shadow: rgba(255, 255, 255, 0.5) 0 1px 0;
}

.et2_placeholder .et2_attr {
    display: block;
    font-size: 8pt;
    color: #3030A0;
    margin: 2px 0 2px 0;
}

/**
 * Splitter widget - split pane
 */
.et2_split {
    width: 100%;
    min-width: 100px;
    min-height: 100px;
}

.splitter-bar-vertical {
    cursor: ew-resize;
    width: 5px;
}

.splitter-bar-horizontal {
    cursor: ns-resize;
    height: 5px;
    width: 100% !important;
}

/* Hide iframes so moving works */
.splitter-iframe-hide {
    display: none;
}

.et2_split div.splitter-bar-vertical div.ui-icon {
    position: absolute;
    margin-left: -5px;
    top: 45%;
}

.et2_split div.splitter-bar-horizontal div.ui-icon {
    position: absolute;
    margin-top: -6px;
    left: 47%;
}

/* Make sure there's no overflow, or hidden bits still appear */
* > .et2_split {
    overflow: hidden;
}

/* These need to be applied to tame the sizing before printing */
.et2_split.print, .et2_split.print > .splitter-pane {
    height: auto !important;
    width: auto !important;
}

.et2_split.print > * {
    position: relative !important;
}

/**
 * Label widget, and labels for other widgets
 */
.et2_label {
    color: #101050;
    white-space: pre-wrap;
}

label.et2_label > * {
    margin-left: 5px !important;
}

label.et2_label.et2_label_empty > * {
    margin-left: 0 !important;
}

/*do not pre-wrap label as it would cause empty space*/
.et2_vbox > .et2_label.et2_label_empty {
    white-space: normal;
}

#msg,
.message {
    color: red;
}

input.et2_url {
    margin-right: 6px;
    padding-right: 8px;
}
/* ... */

